Propagate auto-resize viewport values to OOPIF processes

RenderWidgetHostViewChildFrame currently gets its visible viewport size
from the top-level RenderWidgetHostView, which typically comes from the
platform window. However, when the top-level frame has auto-resize
enabled, internally it sets its own visible viewport, and this
information not available to OOPIF children. This causes issues
in particular for extension popups which have window sizes of (0, 0)
and rely on auto-resize to modify the viewport in Blink.

This patch causes the WebContents to store the auto-resize value
reported by the top-level frame and make it available to OOPIF
RenderWidgetHostViews. They, in turn, allow an auto-resize size to
override the windows size when determining their visible viewport.

BUG=726743
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2914013004
Cr-Commit-Position: refs/heads/master@{#476772}

Former-commit-id: e4f9108cb1e95e813387cf0b7eca98992530fdb1