content/browser/renderer_host/render_widget_host_delegate.cc
@@ -111,6 +111,10 @@ void RenderWidgetHostDelegate::UpdateUrlForUkmSource(
     ukm::UkmRecorder* service,
     ukm::SourceId ukm_source_id) {}
 
+gfx::Size RenderWidgetHostDelegate::GetAutoResizeSize() {
+  return gfx::Size();
+}
+
 WebContents* RenderWidgetHostDelegate::GetAsWebContents() {
   return nullptr;
 }
